# axum_server

./: .env  Cargo.toml  save_order.json
return/: user.json
sql/: user.sql  user_info_down.sql  user_up.sql
src/: jsonwebtoken.rs  main.rs  router.rs
src/entity/: category.rs  mod.rs  order_detail.rs  order_info.rs  user_info.rs
src/form/: form_entity.rs  mod.rs
src/handler/: category.rs  mod.rs
