[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.10", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
askama = "0.11"
config = "0.13"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.87"
jsonwebtoken = "8"
anyhow = "1"
